--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,9 @@
     "description": "Xero oAuth2 app for PHP",
     "type": "project",
     "require": {
-        "xeroapi/xero-php-oauth2": "1.0.5",
-        "monolog/monolog": "1.0"
+        "xeroapi/xero-php-oauth2": "1.0.6",
+        "monolog/monolog": "1.0",
+        "vlucas/phpdotenv": "^4.1"
     },
     "license": "MIT",
     "authors": [
