--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,19 @@
-web:
-  image: nginx:latest
-  ports:
-    - "8080:80"
-  volumes:
-    - .:/var/www
-    - ./nginx/conf.d/:/etc/nginx/conf.d/
-  working_dir: /httpdocs
-  links:
-    - php
-php:
-  image: php:7-fpm
-  expose:
-    - 9000
-  volumes:
-    - .:/var/www
+version: "3.1"
+
+services:
+  web:
+    image: nginx:latest
+    ports:
+      - "${APP_HTTP_PORT:-8080}:80"
+    volumes:
+      - .:/var/www
+      - ./nginx/conf.d/:/etc/nginx/conf.d/
+    working_dir: /httpdocs
+    links:
+      - php
+  php:
+    image: php:7-fpm
+    expose:
+      - 9000
+    volumes:
+      - .:/var/www
