--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": "xeroapi/xero-php-oauth2-app",
-    "description": "Xero oAuth2 app for PHP",
-    "type": "project",
-    "require": {
-        "xeroapi/xero-php-oauth2": "2.5.4",
-        "monolog/monolog": "1.0",
-        "vlucas/phpdotenv": "^4.1"
-    },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Xero API Team",
-            "email": "api@xero.com"
-        }
-    ]
+  "name": "xeroapi/xero-php-oauth2-app",
+  "description": "Xero OAuth 2.0 app for PHP",
+  "type": "project",
+  "require": {
+    "xeroapi/xero-php-oauth2": "2.5.4",
+    "monolog/monolog": "1.0",
+    "vlucas/phpdotenv": "^4.1"
+  },
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Xero API Team",
+      "email": "api@xero.com"
+    }
+  ]
 }
