--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,10 @@
   "description": "Xero OAuth 2.0 app for PHP",
   "type": "project",
   "require": {
-    "xeroapi/xero-php-oauth2": "2.10.0",
+    "xeroapi/xero-php-oauth2": "2.11.0",
     "monolog/monolog": "1.0",
-    "vlucas/phpdotenv": "^4.1"
+    "vlucas/phpdotenv": "^4.1",
+    "symfony/deprecation-contracts": "2.5.0"
   },
   "license": "MIT",
   "authors": [
