--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,18 @@
   "description": "Xero OAuth 2.0 app for PHP",
   "type": "project",
   "require": {
-    "xeroapi/xero-php-oauth2": "2.11.0",
+    "xeroapi/xero-php-oauth2": "*",
     "monolog/monolog": "1.0",
     "vlucas/phpdotenv": "^4.1",
     "symfony/deprecation-contracts": "2.5.0"
   },
+  "repositories": [
+    {
+        "type": "path",
+        "url": "/Users/rett.behrens/Desktop/code/sdks/xero-php-oauth2"
+    }
+],
+"minimum-stability": "dev",
   "license": "MIT",
   "authors": [
     {
